test_programs/compile_failure/noirc_frontend_tests_multiple_resolution_errors/src/main.nr

        fn main(x : Field) {
           let y = foo::bar(x);
           let z = y + a;
                       
        }
    